--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,38 @@
 .navbar {
     background-color: #DADADA;
 }
+
+div>a>img {
+  height: 20rem;
+  width: auto;
+  margin: 0 0 0 3rem;
+
+}
+
+.btn {
+  border-color: #BB55B6;
+}
+
+#carouselExampleCaptions > div > div:nth-child(1) > div {
+  width:20rem;
+  height: 5rem;
+}
+
+#carouselExampleCaptions > div > div.carousel-item.active {
+  background-color: #8135CC;
+  color: white;
+}
+
+#carouselExampleCaptions {
+  width: 80rem;
+  height: 10rem;
+}
+
+#carouselExampleCaptions > div > div.carousel-item.active > img {
+  width: 10rem;
+  height: auto;
+}
+
+.offre {
+ margin: 0 0 0 10rem;
+}
