--- a/css/style3.css
+++ b/css/style3.css
@@ -4,7 +4,7 @@
 /* font-family: 'DM Sans', sans-serif; */
 
 html {
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 body {
@@ -12,30 +12,29 @@ body {
   background-image: url(../img/dice-658643_1280.png);
   background-position: center;
   background-size: 40%;
-
-}
-
-
-header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-  height: auto;
-}
-
-.logo {
-  height: 20rem;
-  width: auto;
-  float: left;
 }
 
 .navbar {
-  background-color: #DADADA;
+  background-color: #dadada;
+}
+
+.logo {
+  width: 5rem;
+  height: 5rem;
+  margin: 0
 }
 
 .dropdown-menu {
-  background-color: #DADADA;
+  background-color: #dadada;
+}
+
+.btn {
+  background-color: #bb55b6;
+  font-family: 'DM Sans', sans-serif;
+  width: 8rem;
+  height: 2rem;
+  font-size: 0.8rem;
+  margin-left: 20rem;
 }
 
 div>a>img {
@@ -43,11 +42,6 @@ div>a>img {
   width: auto;
   margin: 0 0 0 3rem;
 
-}
-
-.btn {
-  
-  background-color: #BB55B6;
 }
 
 #carouselExampleCaptions {
@@ -92,9 +86,13 @@ body>button.carousel-control-next {
 .offre {
   margin: 0 auto;
   font-size: xx-large;
-  margin-top: 1rem;
   font-family: 'Permanent Marker', cursive;
 }
+
+.vingt {
+  font-size: medium;
+  font-family: 'DM Sans', sans-serif;
+  }
 
 .carousel-item {
   margin: 0 auto;
@@ -141,4 +139,56 @@ h2 {
   body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(1) > div > p:nth-child(3) {
     color: white;
     font-size: 1.5rem;
+  }
+
+  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(2) > div > h5 {
+    font-weight: bold;
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(3) > div > h5 {
+    font-weight: bold;
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  body > div.listcard2.text-center.row.justify-content-evenly.mt-5 > div:nth-child(1) > div > h5 {
+    font-weight: bold;
+    color: white;
+    font-size: 1.5rem;
+  }
+  body > div.listcard2.text-center.row.justify-content-evenly.mt-5 > div:nth-child(2) > div > h5 {
+    font-weight: bold;
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(2) > div > p:nth-child(3){
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(3) > div > p:nth-child(3){
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  body > div.listcard2.text-center.row.justify-content-evenly.mt-5 > div:nth-child(1) > div > p:nth-child(3) {
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  body > div.listcard2.text-center.row.justify-content-evenly.mt-5 > div:nth-child(2) > div > p:nth-child(3) {
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  .container {
+    font-family: 'DM Sans', sans-serif;
+    color: black;
+  }
+
+  .nav-item:hover{
+    background-color: #BB55B6;
   }
