--- a/css/style3.css
+++ b/css/style3.css
@@ -7,6 +7,94 @@ html {
   font-family: "DM Sans", sans-serif;
 }
 
+body>header>nav>div {
+  height: 9rem;
+}
+
+.warp__placeholder {
+  position: absolute;
+  color: transparent;
+  font-size: .1px;
+}
+
+.warp {
+  display: block;
+  position: relative;
+  width: 7.5rem;
+  height: 18rem;
+  font: lighter 1.812rem/1 arial;
+  font-family: 'Permanent Marker', cursive;
+}
+
+[class*='warp__'] {
+  display: block;
+  position: absolute;
+}
+
+.warp__0 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(7.398rem, 9.464rem) rotate(-1.717617rad);
+}
+
+.warp__1 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(7.327rem, 8.431rem) rotate(-1.553547rad);
+}
+
+.warp__2 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(7.646rem, 7.664rem) rotate(-1.404998rad);
+}
+
+.warp__3 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(7.802rem, 7.232rem) rotate(-1.308821rad);
+}
+
+.warp__4 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(7.752rem, 6.585rem) rotate(-1.144998rad);
+}
+
+.warp__5 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(8.229rem, 5.756rem) rotate(-0.892788rad);
+}
+
+.warp__6 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(8.951rem, 5.003rem) rotate(-0.601318rad);
+}
+
+.warp__7 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(10.057rem, 4.619rem) rotate(-0.40478rad);
+}
+
+.warp__8 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(10.413rem, 4.394rem) rotate(-0.243935rad);
+}
+
+.warp__9 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(11.412rem, 4.258rem) rotate(-0.03967rad);
+}
+
+.warp__10 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(12.355rem, 4.311rem) rotate(0.146908rad);
+}
+
+.warp__11 {
+  transform-origin: 50% 1.5rem;
+  transform: translate(13.364rem, 4.479rem) rotate(0.286293rad);
+}
+
+html {
+  font-family: "DM Sans", sans-serif;
+}
+
 body {
   width: 100%;
   background-image: url(../img/dice-658643_1280.png);
@@ -18,9 +106,17 @@ body {
   background-color: #dadada;
 }
 
+.superposition {
+  position: absolute;
+  font-size: medium;
+  text-align: left;
+
+  font-family: 'Permanent Marker', cursive;
+}
+
 .logo {
-  width: 5rem;
-  height: 5rem;
+  width: 10rem;
+  height: 10rem;
   margin: 0
 }
 
@@ -37,6 +133,7 @@ body {
   margin-left: 20rem;
 }
 
+
 .btn2 {
   background-color: #bb55b6;
   font-family: 'DM Sans', sans-serif;
@@ -45,14 +142,6 @@ body {
   font-size: 0.8rem;
   border-radius: 5px;
 }
-
-div>a>img {
-  height: 20rem;
-  width: auto;
-  margin: 0 0 0 3rem;
-
-}
-
 
 #carouselExampleCaptions {
   width: 70%;
@@ -83,11 +172,10 @@ body>button.carousel-control-next {
 }
 
 #carouselExampleCaptions>div>div.carousel-item.active {
-  background-color: #3350D4;
+  background-color: #3350d4;
   color: white;
   height: 10rem;
 }
-
 
 #carouselExampleCaptions>div>div.carousel-item.active>img {
   width: 9rem;
@@ -100,109 +188,123 @@ body>button.carousel-control-next {
 .offre {
   margin: 0 auto;
   font-size: xx-large;
-  font-family: 'Permanent Marker', cursive;
+  font-family: "Permanent Marker", cursive;
 }
 
 .vingt {
   font-size: medium;
   font-family: 'DM Sans', sans-serif;
-  }
+}
 
 .carousel-item {
   margin: 0 auto;
-  font-size:large;
-  font-family: 'Permanent Marker', cursive;
+  font-size: large;
+  font-family: "Permanent Marker", cursive;
   text-align: center;
 }
-#carouselExampleCaptions > div > div.carousel-item.active > p {
-  margin-top:3rem;
+
+#carouselExampleCaptions>div>div.carousel-item.active>p {
+  margin-top: 3rem;
   text-align: left;
-  margin-right: 6rem;
+  margin-right: 10rem;
 }
 
 #carouselExampleCaptions>div>div.carousel-item.active>div>p:nth-child(2)>a {
-  background-color: #BB55B6;
+  background-color: #bb55b6;
   margin-top: 1rem;
   width: 9rem;
   height: 2.5rem;
   font-size: 1rem;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
-h2 {
-    text-align: center;
-    margin-top: 4rem;
+.titre {
+  margin-top: 4rem;
+  font-family: 'Permanent Marker', cursive;
 }
 
 .card {
 
-    background-color: #8135CC;
-    font-family: 'DM Sans', sans-serif;
-  
-  }
-  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(1) > div > p.card-text.text-white {
-    font-size: 1rem;
-  }
+  background-color: #8135CC;
+  font-family: 'DM Sans', sans-serif;
 
-  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(1) > div > h5 {
-    font-weight: bold;
-    color: white;
-    font-size: 1.5rem;
-  }
+}
 
-  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(1) > div > p:nth-child(3) {
-    color: white;
-    font-size: 1.5rem;
-  }
+.btn3 {
+  background-color: #bb55b6;
+  font-family: 'DM Sans', sans-serif;
+  width: 8rem;
+  height: 2rem;
+  font-size: 0.8rem;
+  border-radius: 5px;
+  text-decoration: none;
+  padding: 0.7rem;
+}
 
-  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(2) > div > h5 {
-    font-weight: bold;
-    color: white;
-    font-size: 1.5rem;
-  }
+body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(1)>div>p.card-text.text-white {
+  font-size: 1rem;
+}
 
-  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(3) > div > h5 {
-    font-weight: bold;
-    color: white;
-    font-size: 1.5rem;
-  }
+body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(1)>div>h5 {
+  font-weight: bold;
+  color: white;
+  font-size: 1.5rem;
+}
 
-  body > div.listcard2.text-center.row.justify-content-evenly.mt-5 > div:nth-child(1) > div > h5 {
-    font-weight: bold;
-    color: white;
-    font-size: 1.5rem;
-  }
-  body > div.listcard2.text-center.row.justify-content-evenly.mt-5 > div:nth-child(2) > div > h5 {
-    font-weight: bold;
-    color: white;
-    font-size: 1.5rem;
-  }
+body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(1)>div>p:nth-child(3) {
+  color: white;
+  font-size: 1.5rem;
+}
 
-  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(2) > div > p:nth-child(3){
-    color: white;
-    font-size: 1.5rem;
-  }
+body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(2)>div>h5 {
+  font-weight: bold;
+  color: white;
+  font-size: 1.5rem;
+}
 
-  body > div.listcard1.text-center.row.justify-content-evenly.mt-4 > div:nth-child(3) > div > p:nth-child(3){
-    color: white;
-    font-size: 1.5rem;
-  }
+body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(3)>div>h5 {
+  font-weight: bold;
+  color: white;
+  font-size: 1.5rem;
+}
 
-  body > div.listcard2.text-center.row.justify-content-evenly.mt-5 > div:nth-child(1) > div > p:nth-child(3) {
-    color: white;
-    font-size: 1.5rem;
-  }
+body>div.listcard2.text-center.row.justify-content-evenly.mt-5>div:nth-child(1)>div>h5 {
+  font-weight: bold;
+  color: white;
+  font-size: 1.5rem;
+}
 
-  body > div.listcard2.text-center.row.justify-content-evenly.mt-5 > div:nth-child(2) > div > p:nth-child(3) {
-    color: white;
-    font-size: 1.5rem;
-  }
+body>div.listcard2.text-center.row.justify-content-evenly.mt-5>div:nth-child(2)>div>h5 {
+  font-weight: bold;
+  color: white;
+  font-size: 1.5rem;
+}
 
-  .container {
-    font-family: 'DM Sans', sans-serif;
-    color: black;
-  }
+body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(2)>div>p:nth-child(3) {
+  color: white;
+  font-size: 1.5rem;
+}
 
-  .nav-item:hover{
-    background-color: #BB55B6;
-  }
+body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(3)>div>p:nth-child(3) {
+  color: white;
+  font-size: 1.5rem;
+}
+
+body>div.listcard2.text-center.row.justify-content-evenly.mt-5>div:nth-child(1)>div>p:nth-child(3) {
+  color: white;
+  font-size: 1.5rem;
+}
+
+body>div.listcard2.text-center.row.justify-content-evenly.mt-5>div:nth-child(2)>div>p:nth-child(3) {
+  color: white;
+  font-size: 1.5rem;
+}
+
+.container {
+  font-family: 'DM Sans', sans-serif;
+  color: black;
+}
+
+.nav-item:hover {
+  background-color: #BB55B6;
+}
