--- a/css/style.css
+++ b/css/style.css
@@ -217,12 +217,8 @@ body > button.carousel-control-next {
   font-family: "DM Sans", sans-serif;
 }
 
-.categories {
-  flex-direction: row;
-  justify-content: center;
-}
-
 .card {
+  width: 18rem;
   background-color: #8135cc;
   margin: 2rem 2rem 2rem 2rem;
   font-size: x-large;
