--- a/css/style3.css
+++ b/css/style3.css
@@ -1,20 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
 /* font-family: 'Permanent Marker', cursive; */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap");
 /* font-family: 'DM Sans', sans-serif; */
 
 html {
   font-family: "DM Sans", sans-serif;
 }
 
-body>header>nav>div {
+body > header > nav > div {
   height: 9rem;
 }
 
 .warp__placeholder {
   position: absolute;
   color: transparent;
-  font-size: .1px;
+  font-size: 0.1px;
 }
 
 .warp {
@@ -23,10 +23,10 @@ body>header>nav>div {
   width: 7.5rem;
   height: 18rem;
   font: lighter 1.812rem/1 arial;
-  font-family: 'Permanent Marker', cursive;
+  font-family: "Permanent Marker", cursive;
 }
 
-[class*='warp__'] {
+[class*="warp__"] {
   display: block;
   position: absolute;
 }
@@ -111,13 +111,13 @@ body {
   font-size: medium;
   text-align: left;
 
-  font-family: 'Permanent Marker', cursive;
+  font-family: "Permanent Marker", cursive;
 }
 
 .logo {
   width: 10rem;
   height: 10rem;
-  margin: 0
+  margin: 0;
 }
 
 .dropdown-menu {
@@ -126,17 +126,16 @@ body {
 
 .btn {
   background-color: #bb55b6;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
   width: 8rem;
   height: 2rem;
   font-size: 0.8rem;
   margin-left: 20rem;
 }
 
-
 .btn2 {
   background-color: #bb55b6;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
   width: 8rem;
   height: 2rem;
   font-size: 0.8rem;
@@ -148,36 +147,36 @@ body {
   margin: 0 auto;
 }
 
-body>button.carousel-control-prev {
+body > button.carousel-control-prev {
   margin: 15rem;
   height: 1rem;
   width: auto;
 }
 
-body>button.carousel-control-next {
+body > button.carousel-control-next {
   margin: 15rem;
   height: 1rem;
   width: auto;
 }
 
-#carouselExampleCaptions>div>div:nth-child(1)>div {
+#carouselExampleCaptions > div > div:nth-child(1) > div {
   width: 20rem;
   height: 5rem;
   margin: 0 auto;
 }
 
-#carouselExampleCaptions>div>div.carousel-item.active>div {
+#carouselExampleCaptions > div > div.carousel-item.active > div {
   margin-bottom: 5rem;
   margin-left: 12rem;
 }
 
-#carouselExampleCaptions>div>div.carousel-item.active {
+#carouselExampleCaptions > div > div.carousel-item.active {
   background-color: #3350d4;
   color: white;
   height: 10rem;
 }
 
-#carouselExampleCaptions>div>div.carousel-item.active>img {
+#carouselExampleCaptions > div > div.carousel-item.active > img {
   width: 9rem;
   height: auto;
   margin-left: 6rem;
@@ -193,7 +192,7 @@ body>button.carousel-control-next {
 
 .vingt {
   font-size: medium;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 .carousel-item {
@@ -203,13 +202,18 @@ body>button.carousel-control-next {
   text-align: center;
 }
 
-#carouselExampleCaptions>div>div.carousel-item.active>p {
+#carouselExampleCaptions > div > div.carousel-item.active > p {
   margin-top: 3rem;
   text-align: left;
   margin-right: 10rem;
 }
 
-#carouselExampleCaptions>div>div.carousel-item.active>div>p:nth-child(2)>a {
+#carouselExampleCaptions
+  > div
+  > div.carousel-item.active
+  > div
+  > p:nth-child(2)
+  > a {
   background-color: #bb55b6;
   margin-top: 1rem;
   width: 9rem;
@@ -220,19 +224,18 @@ body>button.carousel-control-next {
 
 .titre {
   margin-top: 4rem;
-  font-family: 'Permanent Marker', cursive;
+  font-family: "Permanent Marker", cursive;
 }
 
 .card {
-
-  background-color: #8135CC;
-  font-family: 'DM Sans', sans-serif;
-
+  width: 18rem;
+  background-color: #8135cc;
+  font-family: "DM Sans", sans-serif;
 }
 
 .btn3 {
   background-color: #bb55b6;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
   width: 8rem;
   height: 2rem;
   font-size: 0.8rem;
@@ -241,70 +244,114 @@ body>button.carousel-control-next {
   padding: 0.7rem;
 }
 
-body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(1)>div>p.card-text.text-white {
+body
+  > div.listcard1.text-center.row.justify-content-evenly.mt-4
+  > div:nth-child(1)
+  > div
+  > p.card-text.text-white {
   font-size: 1rem;
 }
 
-body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(1)>div>h5 {
+body
+  > div.listcard1.text-center.row.justify-content-evenly.mt-4
+  > div:nth-child(1)
+  > div
+  > h5 {
   font-weight: bold;
   color: white;
   font-size: 1.5rem;
 }
 
-body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(1)>div>p:nth-child(3) {
+body
+  > div.listcard1.text-center.row.justify-content-evenly.mt-4
+  > div:nth-child(1)
+  > div
+  > p:nth-child(3) {
   color: white;
   font-size: 1.5rem;
 }
 
-body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(2)>div>h5 {
+body
+  > div.listcard1.text-center.row.justify-content-evenly.mt-4
+  > div:nth-child(2)
+  > div
+  > h5 {
   font-weight: bold;
   color: white;
   font-size: 1.5rem;
 }
 
-body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(3)>div>h5 {
+body
+  > div.listcard1.text-center.row.justify-content-evenly.mt-4
+  > div:nth-child(3)
+  > div
+  > h5 {
   font-weight: bold;
   color: white;
   font-size: 1.5rem;
 }
 
-body>div.listcard2.text-center.row.justify-content-evenly.mt-5>div:nth-child(1)>div>h5 {
+body
+  > div.listcard2.text-center.row.justify-content-evenly.mt-5
+  > div:nth-child(1)
+  > div
+  > h5 {
   font-weight: bold;
   color: white;
   font-size: 1.5rem;
 }
 
-body>div.listcard2.text-center.row.justify-content-evenly.mt-5>div:nth-child(2)>div>h5 {
+body
+  > div.listcard2.text-center.row.justify-content-evenly.mt-5
+  > div:nth-child(2)
+  > div
+  > h5 {
   font-weight: bold;
   color: white;
   font-size: 1.5rem;
 }
 
-body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(2)>div>p:nth-child(3) {
+body
+  > div.listcard1.text-center.row.justify-content-evenly.mt-4
+  > div:nth-child(2)
+  > div
+  > p:nth-child(3) {
   color: white;
   font-size: 1.5rem;
 }
 
-body>div.listcard1.text-center.row.justify-content-evenly.mt-4>div:nth-child(3)>div>p:nth-child(3) {
+body
+  > div.listcard1.text-center.row.justify-content-evenly.mt-4
+  > div:nth-child(3)
+  > div
+  > p:nth-child(3) {
   color: white;
   font-size: 1.5rem;
 }
 
-body>div.listcard2.text-center.row.justify-content-evenly.mt-5>div:nth-child(1)>div>p:nth-child(3) {
+body
+  > div.listcard2.text-center.row.justify-content-evenly.mt-5
+  > div:nth-child(1)
+  > div
+  > p:nth-child(3) {
   color: white;
   font-size: 1.5rem;
 }
 
-body>div.listcard2.text-center.row.justify-content-evenly.mt-5>div:nth-child(2)>div>p:nth-child(3) {
+body
+  > div.listcard2.text-center.row.justify-content-evenly.mt-5
+  > div:nth-child(2)
+  > div
+  > p:nth-child(3) {
   color: white;
   font-size: 1.5rem;
 }
 
 .container {
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
   color: black;
 }
 
 .nav-item:hover {
-  background-color: #BB55B6;
+  background-color: #bb55b6;
 }
