--- a/css/style3.css
+++ b/css/style3.css
@@ -97,9 +97,6 @@ html {
 
 body {
   width: 100%;
-  background-image: url(../img/dice-658643_1280.png);
-  background-position: center;
-  background-size: 40%;
 }
 
 .navbar {
@@ -222,6 +219,13 @@ body > button.carousel-control-next {
   font-family: "DM Sans", sans-serif;
 }
 
+.wrap {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  background-image: url(../img/dice-658643_1280.png);
+}
+
 .titre {
   margin-top: 4rem;
   font-family: "Permanent Marker", cursive;
@@ -231,6 +235,10 @@ body > button.carousel-control-next {
   width: 18rem;
   background-color: #8135cc;
   font-family: "DM Sans", sans-serif;
+}
+.card>img{
+  width: 100%;
+  height: 100%;
 }
 
 .btn3 {
