--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@ body > header > nav > div {
   height: 9rem;
 }
 
-.warp__placeholder{
+.warp__placeholder {
   position: absolute;
   color: transparent;
-  font-size: .1px;
+  font-size: 0.1px;
 }
 
 .warp {
@@ -23,72 +23,72 @@ body > header > nav > div {
   width: 7.5rem;
   height: 18rem;
   font: lighter 1.812rem/1 arial;
-  font-family: 'Permanent Marker', cursive;
+  font-family: "Permanent Marker", cursive;
 }
 
-[class*='warp__'] {
+[class*="warp__"] {
   display: block;
   position: absolute;
 }
 
 .warp__0 {
   transform-origin: 50% 1.5rem;
-  transform: translate(7.398rem,9.464rem) rotate(-1.717617rad);
+  transform: translate(7.398rem, 9.464rem) rotate(-1.717617rad);
 }
 
 .warp__1 {
   transform-origin: 50% 1.5rem;
-  transform: translate(7.327rem,8.431rem) rotate(-1.553547rad);
+  transform: translate(7.327rem, 8.431rem) rotate(-1.553547rad);
 }
 
 .warp__2 {
   transform-origin: 50% 1.5rem;
-  transform: translate(7.646rem,7.664rem) rotate(-1.404998rad);
+  transform: translate(7.646rem, 7.664rem) rotate(-1.404998rad);
 }
 
 .warp__3 {
   transform-origin: 50% 1.5rem;
-  transform: translate(7.802rem,7.232rem) rotate(-1.308821rad);
+  transform: translate(7.802rem, 7.232rem) rotate(-1.308821rad);
 }
 
 .warp__4 {
   transform-origin: 50% 1.5rem;
-  transform: translate(7.752rem,6.585rem) rotate(-1.144998rad);
+  transform: translate(7.752rem, 6.585rem) rotate(-1.144998rad);
 }
 
 .warp__5 {
   transform-origin: 50% 1.5rem;
-  transform: translate(8.229rem,5.756rem) rotate(-0.892788rad);
+  transform: translate(8.229rem, 5.756rem) rotate(-0.892788rad);
 }
 
 .warp__6 {
   transform-origin: 50% 1.5rem;
-  transform: translate(8.951rem,5.003rem) rotate(-0.601318rad);
+  transform: translate(8.951rem, 5.003rem) rotate(-0.601318rad);
 }
 
 .warp__7 {
   transform-origin: 50% 1.5rem;
-  transform: translate(10.057rem,4.619rem) rotate(-0.40478rad);
+  transform: translate(10.057rem, 4.619rem) rotate(-0.40478rad);
 }
 
 .warp__8 {
   transform-origin: 50% 1.5rem;
-  transform: translate(10.413rem,4.394rem) rotate(-0.243935rad);
+  transform: translate(10.413rem, 4.394rem) rotate(-0.243935rad);
 }
 
 .warp__9 {
   transform-origin: 50% 1.5rem;
-  transform: translate(11.412rem,4.258rem) rotate(-0.03967rad);
+  transform: translate(11.412rem, 4.258rem) rotate(-0.03967rad);
 }
 
 .warp__10 {
   transform-origin: 50% 1.5rem;
-  transform: translate(12.355rem,4.311rem) rotate(0.146908rad);
+  transform: translate(12.355rem, 4.311rem) rotate(0.146908rad);
 }
 
 .warp__11 {
   transform-origin: 50% 1.5rem;
-  transform: translate(13.364rem,4.479rem) rotate(0.286293rad);
+  transform: translate(13.364rem, 4.479rem) rotate(0.286293rad);
 }
 html {
   font-family: "DM Sans", sans-serif;
@@ -96,9 +96,6 @@ html {
 
 body {
   width: 100%;
-  background-image: url(../img/dice-658643_1280.png);
-  background-position: center;
-  background-size: 40%;
 }
 
 .navbar {
@@ -107,16 +104,16 @@ body {
 
 .superposition {
   position: absolute;
-    font-size: medium;
-    text-align: left;
-    
-    font-family: 'Permanent Marker', cursive;
+  font-size: medium;
+  text-align: left;
+
+  font-family: "Permanent Marker", cursive;
 }
 
 .logo {
   width: 10rem;
   height: 10rem;
-  margin: 0
+  margin: 0;
 }
 
 .dropdown-menu {
@@ -125,17 +122,30 @@ body {
 
 .btn {
   background-color: #bb55b6;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-size: 0.8rem;
 }
 
 .btn2 {
   background-color: #bb55b6;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
   width: 8rem;
   height: 2rem;
   font-size: 0.8rem;
   border-radius: 5px;
+}
+
+.wrap {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  background-image: url(../img/dice-658643_1280.png);
+}
+@media (max-width: 450px) {
+  .wrap {
+    width: 100%;
+    background-image: url(../img/dice-658643_1280.png);
+  }
 }
 
 #carouselExampleCaptions {
@@ -188,8 +198,8 @@ body > button.carousel-control-next {
 
 .vingt {
   font-size: medium;
-  font-family: 'DM Sans', sans-serif;
-  }
+  font-family: "DM Sans", sans-serif;
+}
 
 .carousel-item {
   margin: 0 auto;
@@ -227,10 +237,10 @@ body > button.carousel-control-next {
 }
 
 .container {
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
   color: black;
 }
 
-.nav-item:hover{
-  background-color: #BB55B6;
+.nav-item:hover {
+  background-color: #bb55b6;
 }
