--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,11 @@ html {
   font-family: "DM Sans", sans-serif;
 }
 
-body > header > nav > div {
+body>header>nav>div {
   height: 9rem;
 }
 
-.warp__placeholder{
+.warp__placeholder {
   position: absolute;
   color: transparent;
   font-size: .1px;
@@ -33,63 +33,64 @@ body > header > nav > div {
 
 .warp__0 {
   transform-origin: 50% 1.5rem;
-  transform: translate(7.398rem,9.464rem) rotate(-1.717617rad);
+  transform: translate(7.398rem, 9.464rem) rotate(-1.717617rad);
 }
 
 .warp__1 {
   transform-origin: 50% 1.5rem;
-  transform: translate(7.327rem,8.431rem) rotate(-1.553547rad);
+  transform: translate(7.327rem, 8.431rem) rotate(-1.553547rad);
 }
 
 .warp__2 {
   transform-origin: 50% 1.5rem;
-  transform: translate(7.646rem,7.664rem) rotate(-1.404998rad);
+  transform: translate(7.646rem, 7.664rem) rotate(-1.404998rad);
 }
 
 .warp__3 {
   transform-origin: 50% 1.5rem;
-  transform: translate(7.802rem,7.232rem) rotate(-1.308821rad);
+  transform: translate(7.802rem, 7.232rem) rotate(-1.308821rad);
 }
 
 .warp__4 {
   transform-origin: 50% 1.5rem;
-  transform: translate(7.752rem,6.585rem) rotate(-1.144998rad);
+  transform: translate(7.752rem, 6.585rem) rotate(-1.144998rad);
 }
 
 .warp__5 {
   transform-origin: 50% 1.5rem;
-  transform: translate(8.229rem,5.756rem) rotate(-0.892788rad);
+  transform: translate(8.229rem, 5.756rem) rotate(-0.892788rad);
 }
 
 .warp__6 {
   transform-origin: 50% 1.5rem;
-  transform: translate(8.951rem,5.003rem) rotate(-0.601318rad);
+  transform: translate(8.951rem, 5.003rem) rotate(-0.601318rad);
 }
 
 .warp__7 {
   transform-origin: 50% 1.5rem;
-  transform: translate(10.057rem,4.619rem) rotate(-0.40478rad);
+  transform: translate(10.057rem, 4.619rem) rotate(-0.40478rad);
 }
 
 .warp__8 {
   transform-origin: 50% 1.5rem;
-  transform: translate(10.413rem,4.394rem) rotate(-0.243935rad);
+  transform: translate(10.413rem, 4.394rem) rotate(-0.243935rad);
 }
 
 .warp__9 {
   transform-origin: 50% 1.5rem;
-  transform: translate(11.412rem,4.258rem) rotate(-0.03967rad);
+  transform: translate(11.412rem, 4.258rem) rotate(-0.03967rad);
 }
 
 .warp__10 {
   transform-origin: 50% 1.5rem;
-  transform: translate(12.355rem,4.311rem) rotate(0.146908rad);
+  transform: translate(12.355rem, 4.311rem) rotate(0.146908rad);
 }
 
 .warp__11 {
   transform-origin: 50% 1.5rem;
-  transform: translate(13.364rem,4.479rem) rotate(0.286293rad);
+  transform: translate(13.364rem, 4.479rem) rotate(0.286293rad);
 }
+
 html {
   font-family: "DM Sans", sans-serif;
 }
@@ -107,10 +108,10 @@ body {
 
 .superposition {
   position: absolute;
-    font-size: medium;
-    text-align: left;
-    
-    font-family: 'Permanent Marker', cursive;
+  font-size: medium;
+  text-align: left;
+
+  font-family: 'Permanent Marker', cursive;
 }
 
 .logo {
@@ -143,36 +144,36 @@ body {
   margin: 0 auto;
 }
 
-body > button.carousel-control-prev {
+body>button.carousel-control-prev {
   margin: 15rem;
   height: 1rem;
   width: auto;
 }
 
-body > button.carousel-control-next {
+body>button.carousel-control-next {
   margin: 15rem;
   height: 1rem;
   width: auto;
 }
 
-#carouselExampleCaptions > div > div:nth-child(1) > div {
+#carouselExampleCaptions>div>div:nth-child(1)>div {
   width: 20rem;
   height: 5rem;
   margin: 0 auto;
 }
 
-#carouselExampleCaptions > div > div.carousel-item.active > div {
+#carouselExampleCaptions>div>div.carousel-item.active>div {
   margin-bottom: 5rem;
   margin-left: 12rem;
 }
 
-#carouselExampleCaptions > div > div.carousel-item.active {
+#carouselExampleCaptions>div>div.carousel-item.active {
   background-color: #3350d4;
   color: white;
   height: 10rem;
 }
 
-#carouselExampleCaptions > div > div.carousel-item.active > img {
+#carouselExampleCaptions>div>div.carousel-item.active>img {
   width: 9rem;
   height: auto;
   margin-left: 6rem;
@@ -189,7 +190,7 @@ body > button.carousel-control-next {
 .vingt {
   font-size: medium;
   font-family: 'DM Sans', sans-serif;
-  }
+}
 
 .carousel-item {
   margin: 0 auto;
@@ -197,18 +198,14 @@ body > button.carousel-control-next {
   font-family: "Permanent Marker", cursive;
   text-align: center;
 }
-#carouselExampleCaptions > div > div.carousel-item.active > p {
+
+#carouselExampleCaptions>div>div.carousel-item.active>p {
   margin-top: 3rem;
   text-align: left;
   margin-right: 10rem;
 }
 
-#carouselExampleCaptions
-  > div
-  > div.carousel-item.active
-  > div
-  > p:nth-child(2)
-  > a {
+#carouselExampleCaptions>div>div.carousel-item.active>div>p:nth-child(2)>a {
   background-color: #bb55b6;
   margin-top: 1rem;
   width: 9rem;
@@ -235,6 +232,22 @@ body > button.carousel-control-next {
   color: black;
 }
 
-.nav-item:hover{
+.nav-item:hover {
   background-color: #BB55B6;
+}
+
+@media (max-width: 900px) {
+
+  .categories {
+
+    flex-direction: column;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .card {
+
+    height: auto;
+  }
 }
