rectificatif différentes pages

--- a/css/style3.css
+++ b/css/style3.css
@@ -7,10 +7,6 @@ html {
   font-family: "DM Sans", sans-serif;
 }
 
-body > header > nav > div {
-  height: 9rem;
-}
-
 .warp__placeholder {
   position: absolute;
   color: transparent;
@@ -134,15 +130,27 @@ body {
   margin: 0 auto;
 }
 
-body > button.carousel-control-prev {
-  margin: 15rem;
+body > div > button.carousel-control-prev {
+  margin-top: 20rem;
+  margin-left: 22rem;
   height: 1rem;
   width: auto;
 }
 
-body > button.carousel-control-next {
-  margin: 15rem;
+body > div > button.carousel-control-next {
+  margin-top: 20rem;
+  margin-right: 22rem;
   height: 1rem;
+  width: auto;
+}
+
+body > div > button.carousel-control-next {
+  height: 2rem;
+  width: auto;
+}
+
+body > div > button.carousel-control-prev {
+  height: 2rem;
   width: auto;
 }
 
@@ -199,10 +207,10 @@ body > button.carousel-control-next {
   > div
   > div.carousel-item.active
   > div
-  > p:nth-child(2)
+  > p:nth-child(3)
   > a {
   background-color: #bb55b6;
-  margin-top: 1rem;
+  margin-left: 9rem;
   width: 9rem;
   height: 2.5rem;
   font-size: 1rem;
