--- a/css/style.css
+++ b/css/style.css
@@ -7,97 +7,12 @@ html {
   font-family: "DM Sans", sans-serif;
 }
 
-<<<<<<< HEAD
-body>header>nav>div {
-  height: 9rem;
-}
 
-.warp__placeholder {
-  position: absolute;
-  color: transparent;
-  font-size: .1px;
-}
-
-.warp {
-  display: block;
-  position: relative;
-  width: 7.5rem;
-  height: 18rem;
-  font: lighter 1.812rem/1 arial;
-  font-family: 'Permanent Marker', cursive;
-}
-
-[class*='warp__'] {
-  display: block;
-  position: absolute;
-}
-
-.warp__0 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(7.398rem, 9.464rem) rotate(-1.717617rad);
-}
-
-.warp__1 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(7.327rem, 8.431rem) rotate(-1.553547rad);
-}
-
-.warp__2 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(7.646rem, 7.664rem) rotate(-1.404998rad);
-}
-
-.warp__3 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(7.802rem, 7.232rem) rotate(-1.308821rad);
-}
-
-.warp__4 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(7.752rem, 6.585rem) rotate(-1.144998rad);
-}
-
-.warp__5 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(8.229rem, 5.756rem) rotate(-0.892788rad);
-}
-
-.warp__6 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(8.951rem, 5.003rem) rotate(-0.601318rad);
-}
-
-.warp__7 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(10.057rem, 4.619rem) rotate(-0.40478rad);
-}
-
-.warp__8 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(10.413rem, 4.394rem) rotate(-0.243935rad);
-}
-
-.warp__9 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(11.412rem, 4.258rem) rotate(-0.03967rad);
-}
-
-.warp__10 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(12.355rem, 4.311rem) rotate(0.146908rad);
-}
-
-.warp__11 {
-  transform-origin: 50% 1.5rem;
-  transform: translate(13.364rem, 4.479rem) rotate(0.286293rad);
-}
 
 html {
   font-family: "DM Sans", sans-serif;
 }
 
-=======
->>>>>>> bba45ff45eca1549e727d0ecff669c1b5e48614f
 body {
   width: 100%;
 }
@@ -106,7 +21,6 @@ body {
   background-color: #dadada;
 }
 
-<<<<<<< HEAD
 .superposition {
   position: absolute;
   font-size: medium;
@@ -115,8 +29,6 @@ body {
   font-family: 'Permanent Marker', cursive;
 }
 
-=======
->>>>>>> bba45ff45eca1549e727d0ecff669c1b5e48614f
 .logo {
   width: 10rem;
   height: 10rem;
@@ -160,15 +72,27 @@ body {
   margin: 0 auto;
 }
 
-body>button.carousel-control-prev {
-  margin: 15rem;
+body > div.wrapper > button.carousel-control-prev {
+  margin-top: 20rem;
+  margin-left: 22rem;
   height: 1rem;
   width: auto;
 }
 
-body>button.carousel-control-next {
-  margin: 15rem;
+body > div.wrapper > button.carousel-control-next {
+  margin-top: 20rem;
+  margin-right: 22rem;
   height: 1rem;
+  width: auto;
+}
+
+body > div.wrapper > button.carousel-control-next {
+  height: 2rem;
+  width: auto;
+}
+
+body > div.wrapper > button.carousel-control-prev {
+  height: 2rem;
   width: auto;
 }
 
@@ -205,11 +129,8 @@ body>button.carousel-control-next {
 
 .vingt {
   font-size: medium;
-<<<<<<< HEAD
   font-family: 'DM Sans', sans-serif;
-=======
   font-family: "DM Sans", sans-serif;
->>>>>>> bba45ff45eca1549e727d0ecff669c1b5e48614f
 }
 
 .carousel-item {
@@ -225,11 +146,11 @@ body>button.carousel-control-next {
   margin-right: 10rem;
 }
 
-#carouselExampleCaptions>div>div.carousel-item.active>div>p:nth-child(2)>a {
+#carouselExampleCaptions > div > div.carousel-item.active > div > p:nth-child(3) > a {
   background-color: #bb55b6;
-  margin-top: 1rem;
+  margin-left:  10rem;
   width: 9rem;
-  height: 2.5rem;
+  height: 2rem;
   font-size: 1rem;
   font-family: "DM Sans", sans-serif;
 }
@@ -249,7 +170,6 @@ body>button.carousel-control-next {
 }
 
 .nav-item:hover {
-<<<<<<< HEAD
   background-color: #BB55B6;
 }
 
@@ -267,8 +187,4 @@ body>button.carousel-control-next {
 
     height: auto;
   }
-}
-=======
-  background-color: #bb55b6;
-}
->>>>>>> bba45ff45eca1549e727d0ecff669c1b5e48614f
+
