--- a/css/style2.css
+++ b/css/style2.css
@@ -57,15 +57,26 @@ body {
   margin: 0 auto;
 }
 
-body > button.carousel-control-prev {
-  margin: 15rem;
+
+body > div.wrapper > button.carousel-control-next {
+  margin-top: 20rem;
+  margin-right: 22rem;
   height: 1rem;
   width: auto;
 }
-
-body > button.carousel-control-next {
-  margin: 15rem;
+body > div.wrapper > button.carousel-control-prev {
+  margin-top: 20rem;
+  margin-left: 22rem;
   height: 1rem;
+  width: auto;
+}
+body > div.wrapper > button.carousel-control-next {
+  height: 2rem;
+  width: auto;
+}
+
+body > div.wrapper > button.carousel-control-prev {
+  height: 2rem;
   width: auto;
 }
 
@@ -107,18 +118,13 @@ body > button.carousel-control-next {
   margin-right: 10rem;
 }
 
-#carouselExampleCaptions
-  > div
-  > div.carousel-item.active
-  > div
-  > p:nth-child(2)
-  > a {
-  background-color: #bb55b6;
-  margin-top: 1rem;
-  width: 9rem;
-  height: 2.5rem;
-  font-size: 1rem;
-  font-family: "DM Sans", sans-serif;
+#carouselExampleCaptions > div > div.carousel-item.active > div > p:nth-child(3) > a {
+    background-color: #bb55b6;
+    margin-left:  10rem;
+    width: 9rem;
+    height: 2rem;
+    font-size: 1rem;
+    font-family: "DM Sans", sans-serif;
 }
 
 .card {
