rectif couleur police

--- a/css/style2.css
+++ b/css/style2.css
@@ -15,6 +15,10 @@ body {
   background-color: #dadada;
 }
 
+.nav-item:hover {
+  background-color: #BB55B6;
+}
+
 .logo {
   width: 10rem;
   height: 10rem;
